--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@nestjs/config": "^3.3.0",
     "@nestjs/mapped-types": "*",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "typeorm": "^0.3.20"
   },
