--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./dist",          
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
@@ -16,7 +16,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "rootDir": "./src"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
