--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@nestjs/config": "^3.3.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/mongoose": "^10.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mongoose": "^8.8.0",
     "typeorm": "^0.3.20"
   },
   "name": "daos",
