--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
