--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "@nestjs/config": "^3.3.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^10.1.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.0",
     "typeorm": "^0.3.20"
   },
   "name": "daos",
