--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
-    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist",          
+    "outDir": "./dist",     // Where compiled files go
+    "rootDir": "./src",     // Where source files are
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
@@ -16,8 +15,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "rootDir": "./src"
+    "noFallthroughCasesInSwitch": false
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts"], // Only include source files
+  "exclude": ["node_modules", "dist"] // Exclude dist to avoid overlap
 }
