--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0",
-    "typeorm": "^0.3.20"
+    "mongoose": "^8.8.0"
   },
   "name": "daos",
   "version": "1.0.0",
