--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.79.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-select": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tanstack/router-devtools": "^1.79.0",
+    "@tanstack/router-plugin": "^1.79.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
