--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "jest --config ./api/jest-e2e.json",
     "start": "concurrently \"npm run start:dev --prefix api\" \"npm run dev --prefix web\"",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'"
   },
@@ -27,7 +27,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@nestjs/testing": "^10.4.9",
+    "@types/jest": "^29.5.14",
     "concurrently": "^9.0.1",
-    "prettier": "^3.3.3"
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5"
   }
 }
