--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "dotenv": "^16.4.5",
     "mongodb": "^6.10.0",
