--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "concurrently": "^9.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "react-error-overlay": "^6.0.9",
     "ts-jest": "^29.2.5"
   }
 }
