--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+
   "builds": [
     {
       "src": "dist/main.js",
@@ -10,7 +11,7 @@
     {
       "src": "/(.*)",
       "dest": "dist/main.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     }
   ]
 }
